@@ -14,8 +14,8 @@ class Member
   validates_is_unique :user_id, :scope => :project_id,
         :message => "This user is already member of this project"
 
-  def admin?
-    function.admin?
+  def project_admin?
+    function.project_admin?
   end
 
   def user_name
